--- a/ResumeUpload/src/main/webapp/static/css/app.css
+++ b/ResumeUpload/src/main/webapp/static/css/app.css
@@ -1,57 +1,107 @@
-
 html{
 	background-color:#2F2F2F;
 }
 
-body, #mainWrapper {
+body{
 	height: 100%;
-	background-image: -webkit-gradient(
-	linear,
-	right bottom,
-	right top,
-	color-stop(0, #EDEDED),
-	color-stop(0.08, #EAEAEA),
-	color-stop(1, #2F2F2F),
-	color-stop(1, #AAAAAA)
-);
-background-image: -o-linear-gradient(top, #EDEDED 0%, #EAEAEA 8%, #2F2F2F 100%, #AAAAAA 100%);
-background-image: -moz-linear-gradient(top, #EDEDED 0%, #EAEAEA 8%, #2F2F2F 100%, #AAAAAA 100%);
-background-image: -webkit-linear-gradient(top, #EDEDED 0%, #EAEAEA 8%, #2F2F2F 100%, #AAAAAA 100%);
-background-image: -ms-linear-gradient(top, #EDEDED 0%, #EAEAEA 8%, #2F2F2F 100%, #AAAAAA 100%);
-background-image: linear-gradient(to top, #EDEDED 0%, #EAEAEA 8%, #2F2F2F 100%, #AAAAAA 100%);
+	background-color:rgb(245, 245, 245);
 }
 
-body, #mainWrapper, .form-control{
-	font-size:12px!important;
+
+#header {
+    margin-left:14%;
+    top: 0px;
+    width: 86%;
+	height: 12%;
+	position: fixed;
+	font-family: 'bgMed',arial,helvetica,sans-serif;
+    font-size: 0.6em;
+    color: #fff;
+    z-index: 15;
+    //text-transform: uppercase;
+    background-color: #272727;
+    border-bottom: 2px solid hsl(180,70%,55%);
+    padding-top:5px;
+    text-align:center;
 }
 
-#mainWrapper {
-	height: 100vh; 
-	padding-left:10px;
-	padding-right:10px;
-	padding-bottom:10px;
+#footer {
+	margin-left:14%;
+    left: 0px;
+    bottom: 0px;
+    width: 86%;
+	height: 5%;
+	position: fixed;
+	font-family: 'bgMed',arial,helvetica,sans-serif;
+    font-size: 14px;
+    color: #fff;
+    z-index: 15;
+ //   text-transform: uppercase;
+    background-color: #272727;
+	padding-top:12px;   
+    text-align:center;
 }
 
-#authHeaderWrapper{
-	clear:both;
-	width: 100%;
-	height:3%;
-	padding-top:5px;
-	padding-bottom:5px;
+
+#sidemenu {
+    width: 14%;
+    background-color:#2B2B2B;
+    height: 100%;
+    overflow: auto;
+    float: left;
+    z-index: 20;
+    position: fixed;
+    left: 0px;
+    margin-top:
 }
 
-.login-container {
-    margin-top: 100px;
-    background-color: floralwhite;
-    width: 40%;
-    left: 30%;
-    position: absolute;
+#sidemenu #menu {
+    color: #fff;
+    text-align: right;
+    list-style-type: none;
+    margin-right: 40px;
+    float: right;
 }
 
-.login-card {
+#sidemenu #menu li {
+    width: 150px;
+    height: 35px;
+    font-size: 1.2em;
+    padding-right:5px;
+}
+
+#sidemenu #menu li a {
+    text-decoration: none;
+    //text-transform: uppercase;
+    color: #fff;
+}
+
+#sidemenu #menu li:active{
+	border-left: 5px solid hsl(180,70%,55%);
+}
+
+#sidemenu #menu li:hover {
+    background-color: #635555;
+    border-left: 5px solid hsl(180,70%,55%);
+}
+
+.logo{
+	float:left;
+}
+
+#site-content {
     width: 80%;
-    margin: auto;
+    height: 100%;
+    overflow: auto;
+    float: left;
+    z-index: 20;
+    position: fixed;
+    min-height: 600px;
+    margin-top:10%;
+    margin-bottom:10%;
+    margin-left:20%;
+    padding-left:10px;
 }
-.login-form {
-    padding: 10%;
-}
+
+#sidemenu #menu{margin-top:30px;}
+    
